# backsteros-agent

./: .env.example  .gitignore  AGENTS.md  README.md  agent.example.md  index.html  package-lock.json  package.json  profile.example.md  vite.config.ts
agent/: README.md  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sidecar/: package.json
src-tauri/resources/sidecar/src/: agent.ts  approvals.ts  attachments.ts  config.ts  daily-capture-handlers.ts  daily-capture.test.ts  daily-capture.ts  daily-note-automation.test.ts  daily-note-automation.ts  daily-note.ts  dashboard-flows.ts  delete-file-resolve.test.ts  delete-file-resolve.ts  delete-file.test.ts  env-file.test.ts  events.test.ts  execution-mode.test.ts  gemini.test.ts  gemini.ts  good-morning-feel.test.ts  good-morning-feel.ts  good-morning-response.test.ts  good-morning-response.ts  good-morning.ts  good-night-reflection.test.ts  good-night-reflection.ts  good-night.ts  grocery-checkbox-lines.test.ts  grocery-list.test.ts  grocery-week.test.ts  grocery-week.ts  inline-link-tokens.ts  integrations-secrets.test.ts  integrations-secrets.ts  integrations-test.ts  kokoro.ts  letter-deletion.test.ts  letter-filing.ts  letter-match-catalog.ts  letter-options.ts  (+45 more)
src-tauri/resources/sidecar/src/automation/: daily-capture.ts  registry.ts  types.ts
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  sidecar.rs  traffic_lights.rs  window.rs
src-tauri/src/modules/pty/: agent_detect.rs  mod.rs  session.rs  shell_init.rs
(+717 files in other folders)
